[package]
name = "z85"
version = "1.0.1"
authors = ["Mehmet Kose"]
repository = "https://github.com/decafbad/z85"
edition = "2018"
license = "MIT/Apache-2.0"
description = "Rust implementation of ZeroMQ's base85 algorithm."

[dependencies]
byteorder = "1.3.1"

[dev-dependencies]
quickcheck = "0.8.2"