[package]
name = "z85"
version = "2.3.0"
authors = ["Mehmet Kose"]
repository = "https://github.com/decafbad/z85"
edition = "2018"
license = "MIT/Apache-2.0"
description = "Rust implementation of ZeroMQ's Z85 encoding mechanism."
categories = ["encoding"]

[dev-dependencies]
proptest = "0.9.4"
criterion = "0.3.1"

[dependencies]
smallvec = "1.1.0"

[[bench]]
name = "display"
harness = false
